docs: add get-jwt handler swagger documentation
